--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fastapi
-pydantic
-Pillow
-numpy
-uvicorn
-yolov5
-ultralytics
+fastapi == 0.115.4
+pydantic == 2.9.2
+Pillow == 11.0.0
+numpy == 1.26.4
+uvicorn == 0.32.0
+yolov5  ==  7.0.13
+ultralytics ==  8.3.24
 huggingface-hub == 0.15.1 
-python-multipart
+python-multipart == 0.0.16
+
